Fixed resume section overflow, disabling flex-grow for smaller devices(xs), added a bit of padding to clean things up

--- a/css/site.css
+++ b/css/site.css
@@ -1,7 +1,6 @@
 html, body {
     height: 100%;
     min-height: 100%;
-    overflow-y: hidden;
 }
 
 .resume-section {
